--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body{
   box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
               0 32px 64px -48px rgba(0,0,0,0.5);
 }
+.roshan{
+  background: #fffff
+
+}
 
 /* Login & Signup Form CSS Start */
 .form{
